# Mestia

./: .cursorignore  .cursorrules  .gitattributes  .gitignore  .repomixignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  repomix.config.json  vite.config.ts  vitest.config.ts
.context/: index.md
.github/workflows/: release.yml
docs/: index.html
flatpak/: com.mestia.app.desktop  com.mestia.app.metainfo.xml  com.mestia.app.yml
scripts/: fetch-binaries.mjs  free-port.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: downloader.rs  lib.rs  main.rs  storage.rs
src/components/: DownloadsPanel.tsx  Logo.tsx  Modal.tsx  Settings.tsx  Sidebar.tsx  Splash.tsx  ThemeSwitcher.tsx  Toast.tsx  Typewriter.tsx  UpdateModal.tsx  downloadsPanel.test.ts
src/context/: DownloadsContext.tsx  DragContext.tsx  LanguageContext.tsx  ThemeContext.tsx
src/lib/: db.ts  format.test.ts  i18n.ts  ipc.ts
src/views/: Downloader.tsx  History.tsx  Locker.tsx  MiniPlayer.tsx  Player.tsx
